@@ -21,6 +21,8 @@ examples/check_number_fail.pl
 examples/check_number_of_items_fail.pl
 examples/check_number_of_items_ok.pl
 examples/check_number_ok.pl
+examples/check_number_range_fail.pl
+examples/check_number_range_ok.pl
 examples/check_regexp_fail.pl
 examples/check_regexp_ok.pl
 examples/check_required_fail.pl
@@ -59,10 +61,11 @@ t/Mo-utils/10-check_length.t
 t/Mo-utils/11-check_length_fix.t
 t/Mo-utils/12-check_number.t
 t/Mo-utils/13-check_number_of_items.t
-t/Mo-utils/14-check_regexp.t
-t/Mo-utils/15-check_required.t
-t/Mo-utils/16-check_string_begin.t
-t/Mo-utils/17-check_strings.t
+t/Mo-utils/14-check_number_range.t
+t/Mo-utils/15-check_regexp.t
+t/Mo-utils/16-check_required.t
+t/Mo-utils/17-check_string_begin.t
+t/Mo-utils/18-check_strings.t
 utils.pm
 xt/Mo-utils/01-pod_coverage.t
 xt/Mo-utils/02-pod.t
